fix: rework the sync.py approach
Add option to re-sync the entire database with the --resync flag.
Use the lastModified field from returned entries to determine the
date for the next synchronization.

Signed-off-by: Frantisek Hrbata <frantisek.hrbata@espressif.com>

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           git status
           git add .
-          git commit -m "NVD Sync $(date -u '+%Y-%m-%d %H:%M')"
+          git diff --cached --quiet && exit 0 || git commit -m "NVD Sync $(date -u '+%Y-%m-%d %H:%M')"
 
       - name: Push changes
         env:
